--- a/frontend/src/components/Board.css
+++ b/frontend/src/components/Board.css
@@ -35,9 +35,9 @@
     border-radius: 50%;
 }
 
-.from{
+/* .from{
     width:40px;
     height:40px;
     background: rgba(0, 0, 255, 0.3);
     border-radius: 50%;
-}
+} */
