--- a/frontend/src/components/Board.css
+++ b/frontend/src/components/Board.css
@@ -41,6 +41,19 @@
 .selected{
     box-shadow: inset -4px 0 0 yellow, inset 0 -4px 0 yellow, inset 4px 0 0 yellow, inset 0 4px 0 yellow;
 }
+.last-moved-highlight{
+    box-shadow: inset -4px 0 0 blue, inset 0 -4px 0 blue, inset 4px 0 0 blue, inset 0 4px 0 blue;
+}
+.last-moved-from{
+    width:40px;
+    height:40px;
+    background: rgba(0, 0, 255, 0.5);
+    border-radius: 50%;
+}
+.blank{
+    width:40px;
+    height:40px;
+}
 .valid{
     width:40px;
     height:40px;
